@@ -1,7 +1,0 @@
-#ifndef DEBUG_H
-#define DEBUG_H
-
-void
-stop_in_debugger (void);
-void make_warnings_and_criticals_stop_in_debugger (void);
-#endif
